after adding swal in farmer-my-account

--- a/src/app/farmer/component/farmer-my-account/farmer-alternate-mobile/farmer-alternate-mobile.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-alternate-mobile/farmer-alternate-mobile.component.html
@@ -7,9 +7,15 @@
     <div class = "name"><label for="alternateMobileNumber">Enter Mobile Number</label></div>
     <input type="number" class="form-control" id="alternateMobileNumber" placeholder="Enter Mobile Number" formControlName="alternateMobileNumber">
     <div *ngIf="rForm.controls['alternateMobileNumber'].touched && rForm.controls['alternateMobileNumber'].invalid" class="alert">
-      <div *ngIf="rForm.controls['alternateMobileNumber'].hasError('required')">
-        Mobile Number is required!
+      <div *ngIf="rForm.controls['alternateMobileNumber'].hasError('minlength')" >
+        Less than 10 digits
       </div>
+      <div *ngIf="rForm.controls['alternateMobileNumber'].hasError('maxlength')">
+       More than 10 digits
+     </div>
+     <div *ngIf="rForm.controls['alternateMobileNumber'].hasError('required')">
+      Mobile Number is required!
+    </div>
     </div>
     </div>
     </div>
