--- a/src/app/customer/component/customer-my-account/customer-address-book/customer-add-address/customer-add-address.component.html
+++ b/src/app/customer/component/customer-my-account/customer-address-book/customer-add-address/customer-add-address.component.html
@@ -50,7 +50,7 @@
       </div>
       </div>
       <div class = form-comp-button>
-      <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid"><a routerLink="/customer/addressBook"> Update</a></button>
+      <button type="submit" class="btn btn-primary" value="Submit Form" [disabled]="!rForm.valid"> Update</button>
       </div>
     </div>
   </form>
