--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-transparent topnav">
+     <nav class="navbar navbar-expand-md navbar-dark fixed-top topnav">
      <a class="navbar-brand">
    <img src="../../../assets/Header/kkd_logo.png" width="60" height="60" alt="">
    </a>
@@ -26,7 +26,7 @@
        <ul *ngIf="loggedIn==false">
           <li class="nav-item">
             <div class="dropdown">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                <button type="button" class="btn btn-success dropdown-toggle mt-3" data-toggle="dropdown">
                   LogIn & SignUp
                 </button>
                 <div class="dropdown-menu">
