--- a/src/app/customer/component/product-list/product-list.component.html
+++ b/src/app/customer/component/product-list/product-list.component.html
@@ -4,10 +4,10 @@
     <div class="col-md-3">
 
     </div>
-    <div class="col-md-6">
+    <div class="col-md-9 offset-md-3">
       <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" name="q" placeholder="Search" [(ngModel)]="searchInput"/>
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit" (click)='searchProduct()'><i class="fas fa-search"></i></button>
+        <input class="form-control  searchText" type="text" name="q" placeholder="Search" [(ngModel)]="searchInput"/>
+        <button class="btn btn-outline-primary my-2 my-sm-0 ml-1" type="submit" (click)='searchProduct()'><i class="fas fa-search"></i></button>
     </form>
     </div>
     <div class="col-md-3">
