--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
      <nav class="navbar navbar-expand-md navbar-dark fixed-top topnav">
-     <a class="navbar-brand">
+     <a class="navbar-brand" routerLink="/home">
    <img src="../../../assets/Header/kkd_logo.png" width="60" height="60" alt="">
    </a>
    <button class="navbar-toggler mr-2" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,14 +12,14 @@
          <li class="nav-item active">
            <a class="nav-link" routerLink="/home"><i class="fas fa-home mr-1"></i>Home<span class="sr-only">(current)</span></a>
          </li>
-         <li class="nav-item">
+         <li class="nav-item active">
            <a class="nav-link" routerLink="/productList"><i class="fab fa-product-hunt mr-1"></i>Products </a>
          </li>
 
-         <li class="nav-item">
+         <li class="nav-item active">
            <a class="nav-link" routerLink="/help"><i class="fas fa-hands-helping mr-1"></i>Help</a>
          </li>
-         <li class="nav-item">
+         <li class="nav-item active">
            <a class="nav-link" routerLink="/support"><i class="fas fa-envelope mr-1"></i>Support</a>
          </li>
        </ul>
