all the structure modifications has been completed and the project is working fine

--- a/src/app/farmer/component/farmer-dashboard/farmer-dashboard.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="home mt-100">
 <div class="container-fluid">
         <ul class="nav nav-tabs nav-justified sidebar-nav edit" id="myTab" role="tablist">
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
             <div class="dropdown-menu">
             <ul>
@@ -22,7 +22,11 @@
                 </li>
             </ul>
             </div>
-        </li>
+                    </li> -->
+            <li class="nav-item">
+            <a class="nav-link active dropdown-item" data-toggle="tab" href="#acc" role="tab" aria-controls="acc">My Account</a>
+            </li>
+
         <li class="nav-item">
           <a class="nav-link " data-toggle="tab" href="#prod" role="tab" aria-controls="prod">Add Product</a>
         </li>
