--- a/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="col-sm-8 display-table-cell v-align">
         <div class="card-body" style="width: 200px; margin-left:50px">
-          <img class="card-img-top farmer-image" src="../../../../assets/images/farmer.jpg" alt="Card image" style="width:100%">
+          <!-- <img class="card-img-top farmer-image" src="../../../../assets/images/farmer.jpg" alt="Card image" style="width:100%"> -->
           <h5 class="card-title">{{farmerId}}</h5>
           <p class="card-text">
           <strong>{{farmerAddressLine}}</strong><br />{{farmerCity}} {{farmerDistrict}}<br />{{farmerState}} {{farmerPincode}} <br/>
@@ -21,6 +21,5 @@
         </div>
       </div>
     </div>
-  </div> 
-</div>   
-
+  </div>
+</div>
