--- a/src/app/customer/component/customer-payment/customer-payment.component.html
+++ b/src/app/customer/component/customer-payment/customer-payment.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-100">
   <div class="row">
     <div class="col-sm-12 col-md-4">
       <div class="panel panel-default">
