--- a/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
+++ b/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
@@ -7,14 +7,14 @@
 					<div class="text-left col-md-6">Your Cart
 						<i class="fas fa-shopping-cart"></i> ({{items.length}} Items)</div>
 					<div class="text-right col-md-6">
-						<button type="button" class="btn btn-success btn-sm" routerLink="/customer/homePage">
+						<button type="button" class="btn btn-success btn-sm" routerLink="/productList">
 							<span>
 								<i class="fas fa-shopping-cart"></i>
 							</span> Continue shopping
 						</button>
 					</div>
 				</div>
-				<table class="table table-hover">
+				<table class="table table-hover mt-2">
 					<tbody>
 						<tr *ngFor="let item of items; let ind=index">
 							<td class="text-left ml-4">
@@ -47,10 +47,11 @@
 						</div>
 						<div class="col-md-6">
 							<div class="row">
-								<div class="col-md-6">
-									<strong>Total</strong>
+								<div class="col-md-5">
 								</div>
-								<div class="col-md-2">₹{{x}}</div>
+								<div class="col-md-3">
+									<span><strong>Total :₹{{x}}</strong></span>
+								</div>
 								<div class="col-md-4">
 									<button type="button" class="btn btn-success" (click)="checkout()" routerLink="/customer/payment">
 										<i class="fas fa-hand-point-right"></i>Place Order
@@ -66,10 +67,11 @@
 						</div>
 						<div class="col-md-6">
 							<div class="row">
-								<div class="col-md-6">
-									<strong>Total</strong>
+								<div class="col-md-5">
 								</div>
-								<div class="col-md-2">₹{{x}}</div>
+								<div class="col-md-3">
+									<span><strong>Total :₹{{x}}</strong></span>
+								</div>
 								<div class="col-md-4">
 									<button type="button" class="btn btn-success" routerLink="/customer/myAccount">
 										<i class="fas fa-hand-point-right"></i>Place Order
