--- a/src/app/customer/component/product-list/product-list.component.html
+++ b/src/app/customer/component/product-list/product-list.component.html
@@ -17,7 +17,7 @@
 <div class="container my-4">
   <div class="row">
     <div class="col-md-3">
-      <div class="dropdown">
+      <div class="dropdown ">
        
         <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
          Sort By Relevance
@@ -67,7 +67,7 @@
     <div class="col-md-9">
       <div class="container">
         <div class="row">
-          <div class="col-md-4" *ngFor="let item of products | paginate:{itemsPerPage:6,currentPage:p}">
+          <div class="col-md-6 col-lg-4" *ngFor="let item of products | paginate:{itemsPerPage:6,currentPage:p}">
             <div class="card shadow p-2 mb-3">
               <!-- Card image -->
               <div class="view overlay zoom">
