navigate for adding address after showing address pop up

--- a/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
+++ b/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
@@ -73,7 +73,7 @@
 									<span><strong>Total :₹{{x}}</strong></span>
 								</div>
 								<div class="col-md-4">
-									<button type="button" class="btn btn-success" routerLink="/customer/myAccount">
+									<button type="button" class="btn btn-success" (click)="checkout()">
 										<i class="fas fa-hand-point-right"></i>Place Order
 									</button>
 								</div>
