--- a/src/app/customer/component/product-list/product-list.component.html
+++ b/src/app/customer/component/product-list/product-list.component.html
@@ -37,8 +37,8 @@
       <label class="my-3">
         <span>Filter By Price:</span>
       </label>
-      <ion-range-slider style="color:white" #sliderElement type="double" min="0" [max]=max_price [to_max]=max_price prefix="Price: " postfix=" Rs"
-      keyboard:true (onFinish)="myOnFinishPrice($event)">
+      <ion-range-slider style="color:white" #sliderElement type="double" min="0" [max]=max_price [to_max]=max_price prefix="Price: "
+        postfix=" Rs" keyboard:true (onFinish)="myOnFinishPrice($event)">
       </ion-range-slider>
       <!-- filtered by price end-->
       <!-- filtered by quantity start-->
@@ -50,7 +50,7 @@
       </ion-range-slider>
       <!-- filtered by Quantity end-->
     </div>
-  <!-- end of side bar-->
+    <!-- end of side bar-->
     <div *ngIf="products[0]; then prod else empty"></div>
     <ng-template #prod>
       <div class="col-md-9">
