--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -31,7 +31,7 @@
              <img class="third-slide" src="../../../assets/Body/slide3.png" alt="Third slide">
              <div class="container">
                <div class="carousel-caption">
-                 <h1>Kisaan Ki Dukaan </h1>
+                 <h1>Kisan Ki Dukan </h1>
                  <p id="carouselLine">It's not fresh if it's not from the farm.</p>
                  <p><a class="btn btn-light" routerLink="/farmer/login" role="button" id="btn">I'm a Farmer</a>
                  <a class="btn btn-light" routerLink="/customer/login" role="button" id="btn">I'm a Customer</a></p>
