changes in alert

--- a/src/app/customer/component/customer-register/customer-register.component.css
+++ b/src/app/customer/component/customer-register/customer-register.component.css
@@ -9,14 +9,13 @@
 }
 
 .alert {
-    background: #f2edda;
-    padding: 7px;
+    background: #ffaaaa;
+    padding: 0px;
     font-size: .9em;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     display: inline-block;
     animation: 2s alertAnim forwards;
 }
-
 button{
     background-color : #a9c056 !important;
     border : none;
