working on services test cases of farmer-add-product component

--- a/src/app/farmer/component/farmer-dashboard/farmer-add-product/farmer-add-product.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-add-product/farmer-add-product.component.html
@@ -62,7 +62,7 @@
 		  </div>
 
 		  <div class = form-comp>
-		  <input type="addProductbox" name="available" formControlName="available" value="1"> In Stock
+		  <input type="checkbox" name="available" formControlName="available" value="1"> In Stock
 		</div>
 
       <div class = form-comp>
