--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,8 +1,98 @@
 <app-body></app-body>
 <!-- Hide these cards when a search occurs -->
-<div class="container-fluid">
+
+<div class="services" id="services">
+  <div class="container">
+
+    <h2 class="sub-title">Why Choose Us</h2>
+
+    <div class="banner-bottom-girds">
+      <div class="row">
+        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid">
+          <div class="white-shadow">
+            <div class="row">
+              <div class=" col-md-8 white-right">
+                <h4>Best Logistic</h4>
+                <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
+                <div class="w3layouts_more-buttn ser-buttn">
+                  <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
+                </div>
+
+              </div>
+              <div class="col-md-4 white-left">
+                <span class="fa fa-truck banner-icon" aria-hidden="true"></span>
+              </div>
+            </div>
+            <div class="clearfix"> </div>
+          </div>
+        </div>
+        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid">
+          <div class="white-shadow">
+            <div class="row">
+              <div class=" col-md-8 white-right">
+                <h4>Best Quality</h4>
+                <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
+                <div class="w3layouts_more-buttn ser-buttn">
+                  <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
+                </div>
+
+              </div>
+              <div class="col-md-4 white-left">
+                <span class="fa fa-flask banner-icon" aria-hidden="true"></span>
+              </div>
+            </div>
+            <div class="clearfix"> </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+
+        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid">
+          <div class="white-shadow">
+
+            <div class="row">
+              <div class="col-md-8 white-right">
+                <h4>Best Products</h4>
+                <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
+                <div class="w3layouts_more-buttn ser-buttn">
+                  <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
+                </div>
+
+              </div>
+              <div class="col-md-4 white-left">
+                <span class="fa fa-pagelines banner-icon" aria-hidden="true"></span>
+              </div>
+            </div>
+            <div class="clearfix"> </div>
+          </div>
+        </div>
+        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid">
+          <div class="white-shadow">
+            <div class="row">
+              <div class=" col-md-8 white-right">
+                <h4>Best Seeds</h4>
+                <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
+                <div class="w3layouts_more-buttn ser-buttn">
+                  <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
+                </div>
+
+              </div>
+              <div class="col-md-4 white-left">
+                <span class="fa fa-leaf banner-icon" aria-hidden="true"></span>
+              </div>
+            </div>
+            <div class="clearfix"> </div>
+          </div>
+        </div>
+      </div>
+      <div class="clearfix"> </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
   <div class="row">
-    <div class="col-md-4 d-flex align-items-stretch">
+    <div class="col-md-4 mt-4 d-flex align-items-stretch">
       <div class="card shadow p-2 my-2">
         <img class="card-img-top" src="../../../assets/Body/card1.jpg" alt="Card image cap">
         <div class="card-body">
@@ -13,7 +103,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 d-flex align-items-stretch">
+    <div class="col-md-4 mt-4 d-flex align-items-stretch">
       <div class="card shadow p-2 my-2">
         <img class="card-img-top" src="../../../assets/Body/card2.jpeg" alt="Card image cap">
         <div class="card-body">
@@ -24,7 +114,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 d-flex align-items-stretch">
+    <div class="col-md-4 mt-4 d-flex align-items-stretch">
       <div class="card shadow p-2 my-2">
         <img class="card-img-top" src="../../../assets/Body/card3.jpg" alt="Card image cap">
         <div class="card-body">
@@ -34,43 +124,61 @@
             leading to developing India.</p>
         </div>
       </div>
-    </div> 
+    </div>
     <br>
+
+
+
     <div class="col-md-8 col-center m-auto">
-			<h2>What our clients say</h2>
-			<div id="myCarousel" class="carousel slide" data-ride="carousel">
-				<!-- Carousel indicators -->
-				<ol class="carousel-indicators">
-					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-					<li data-target="#myCarousel" data-slide-to="1"></li>
-					<li data-target="#myCarousel" data-slide-to="2"></li>
-				</ol>   
-				<!-- Wrapper for carousel items -->
-				<div class="carousel-inner">
-					<div class="item carousel-item active">
-						<div class="img-box"><img src="../../../assets/Body/card3.jpg" alt=""></div>
-						<p class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante. Idac bibendum scelerisque non non purus. Suspendisse varius nibh non aliquet.</p>
-						<p class="overview"><b>Paula Wilson</b>, Media Analyst</p>
-					</div>
-					<div class="item carousel-item">
-						<div class="img-box"><img src="../../../assets/Body/card3.jpg" alt=""></div>
-						<p class="testimonial">Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit tincidunt. Utmtc tempus dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse potenti. Aliquam sit amet gravida nibh, facilisis gravida odio.</p>
-						<p class="overview"><b>Antonio Moreno</b>, Web Developer</p>
-					</div>
-					<div class="item carousel-item">
-						<div class="img-box"><img src="../../../assets/Body/card3.jpg" alt=""></div>
-						<p class="testimonial">Phasellus vitae suscipit justo. Mauris pharetra feugiat ante id lacinia. Etiam faucibus mauris id tempor egestas. Duis luctus turpis at accumsan tincidunt. Phasellus risus risus, volutpat vel tellus ac, tincidunt fringilla massa. Etiam hendrerit dolor eget rutrum.</p>
-						<p class="overview"><b>Michael Holz</b>, Seo Analyst</p>
-					</div>
-				</div>
-				<!-- Carousel controls -->
-				<a class="carousel-control left carousel-control-prev" href="#myCarousel" data-slide="prev">
-					<i class="fa fa-angle-left"></i>
-				</a>
-				<a class="carousel-control right carousel-control-next" href="#myCarousel" data-slide="next">
-					<i class="fa fa-angle-right"></i>
-				</a>
-			</div>
-		</div>
+      <h2>What our clients say</h2>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for carousel items -->
+        <div class="carousel-inner">
+          <div class="item carousel-item active">
+            <div class="img-box">
+              <img src="../../../assets/Body/card3.jpg" alt="">
+            </div>
+            <p class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris
+              magna metus, dapibus nec turpis vel, semper malesuada ante. Idac bibendum scelerisque non non purus. Suspendisse
+              varius nibh non aliquet.</p>
+            <p class="overview">
+              <b>Paula Wilson</b>, Media Analyst</p>
+          </div>
+          <div class="item carousel-item">
+            <div class="img-box">
+              <img src="../../../assets/Body/card3.jpg" alt="">
+            </div>
+            <p class="testimonial">Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit tincidunt. Utmtc tempus
+              dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse potenti. Aliquam sit amet gravida nibh,
+              facilisis gravida odio.</p>
+            <p class="overview">
+              <b>Antonio Moreno</b>, Web Developer</p>
+          </div>
+          <div class="item carousel-item">
+            <div class="img-box">
+              <img src="../../../assets/Body/card3.jpg" alt="">
+            </div>
+            <p class="testimonial">Phasellus vitae suscipit justo. Mauris pharetra feugiat ante id lacinia. Etiam faucibus mauris id tempor egestas.
+              Duis luctus turpis at accumsan tincidunt. Phasellus risus risus, volutpat vel tellus ac, tincidunt fringilla
+              massa. Etiam hendrerit dolor eget rutrum.</p>
+            <p class="overview">
+              <b>Michael Holz</b>, Seo Analyst</p>
+          </div>
+        </div>
+        <!-- Carousel controls -->
+        <a class="carousel-control left carousel-control-prev" href="#myCarousel" data-slide="prev">
+          <i class="fa fa-angle-left"></i>
+        </a>
+        <a class="carousel-control right carousel-control-next" href="#myCarousel" data-slide="next">
+          <i class="fa fa-angle-right"></i>
+        </a>
+      </div>
+    </div>
   </div>
 </div>
