--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -56,13 +56,13 @@
       <div class="col-sm-3">
         <div class="social-networks">
           <a  class="twitter">
-            <i class="fab fa-twitter"></i>
+            <i class="fa fa-twitter"></i>
           </a>
           <a class="facebook">
-            <i class="fab fa-facebook-f"></i>
+            <i class="fa fa-facebook"></i>
           </a>
           <a class="google">
-            <i class="fab fa-google-plus-g"></i>
+            <i class="fa fa-google-plus"></i>
           </a>
         </div>
         <button type="button" class="btn btn-default" routerLink="/connect">Contact us</button>
