--- a/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
+++ b/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
@@ -5,11 +5,11 @@
 			<div class="cart-dropdown-container">
 				<div class="row">
 					<div class="text-left col-md-6">Your Cart
-						<i class="fas fa-shopping-cart"></i> ({{items.length}} Items)</div>
+						<i class="fa fa-shopping-cart"></i> ({{items.length}} Items)</div>
 					<div class="text-right col-md-6">
 						<button type="button" class="btn btn-success btn-sm" routerLink="/productList">
 							<span>
-								<i class="fas fa-shopping-cart"></i>
+								<i class="fa fa-shopping-cart"></i>
 							</span> Continue shopping
 						</button>
 					</div>
@@ -31,7 +31,7 @@
 							<td class="text-right">₹{{item.productPrice*item.quantity}}</td>
 							<td class="text-center">
 								<button class="btn btn-outline-danger" (click)="deleteItem(item,ind)" title="Remove" class="btn btn-link">
-									<i class="fas fa-trash-alt"></i>
+									<i class="fa fa-trash"></i>
 								</button>
 							</td>
 						</tr>
@@ -59,7 +59,7 @@
 								</div>
 								<div class="col-md-4">
 									<button type="button" class="btn btn-success" (click)="checkout()" routerLink="/customer/payment">
-										<i class="fas fa-hand-point-right"></i>Place Order
+										<i class="fa fa-hand-o-right"></i>Place Order
 									</button>
 								</div>
 							</div>
