--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,5 +1,7 @@
 body {
 	font-family: Roboto;
+	padding: 0px;
+	margin: 0px;
 }
 h2 {
 	color: #333;
@@ -93,3 +95,70 @@ h2::after {
 	background: #555;		
 	box-shadow: inset 0 2px 1px rgba(0,0,0,0.2);
 }
+
+/*--services--*/
+h2.sub-title {
+    color: #000;
+    font-size: 35px;
+    letter-spacing: 2px;
+    margin-bottom: 35px;
+    text-align: center;
+}
+span.banner-icon {
+    color: #35a041;
+    background: rgb(255, 255, 255);
+    font-size: 56px;
+    line-height:1.7;
+    border: 2px solid #35a041;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    text-align: center;
+}
+.white-right h4 {
+    font-size: 23px;
+    color: #000;
+    font-weight: 600;
+    letter-spacing: 2px;
+}
+.white-right p {
+    line-height: 25px;
+    margin: 1em auto 0em;
+    font-size: 15px;
+    color:#484747;
+}
+
+.white-shadow {
+    background: #ffffff;
+    padding: 25px 20px;
+	border: 1px solid #d8d8d8;
+	margin-bottom: 50px;
+}
+.its-banner-grid:nth-child(3),.its-banner-grid:nth-child(4) {
+    margin-top: 31px;
+}
+.w3layouts_more-buttn {
+    margin: 21px 0px 5px;
+}
+
+.w3layouts_more-buttn a {
+    font-size: 13px;
+    color: #fff;
+    font-weight: 600;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    background-color: #35a041;
+    border: 1px solid #35a041;
+    outline: none;
+    padding: 8px 18px;
+}
+.w3layouts_more-buttn a:hover {
+    background: #fff;
+    color: #000;
+}
+.white-right{text-align:left;}
+.white-left{
+    margin-top: 26px;
+}
+/*--//services--*/
