--- a/src/app/farmer/component/farmer-dashboard/farmer-dashboard.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-dashboard.component.html
@@ -1,28 +1,9 @@
 <div class="home mt-100">
 <div class="container-fluid">
         <ul class="nav nav-tabs nav-justified sidebar-nav edit" id="myTab" role="tablist">
-            <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
-            <div class="dropdown-menu">
-            <ul>
-                <li class="nav-item">
-                <a class="nav-link active dropdown-item" data-toggle="tab" href="#acc" role="tab" aria-controls="acc">My Account</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active dropdown-item" data-toggle="tab" href="#add" role="tab" aria-controls="add">Add Address</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active dropdown-item" data-toggle="tab" href="#chPass" role="tab" aria-controls="chPass">Change Password</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active dropdown-item" data-toggle="tab" href="#altMob" role="tab" aria-controls="altMob">Alternate Mobile</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active dropdown-item" data-toggle="tab" href="#delPro" role="tab" aria-controls="delPro">Delete Profile</a>
-                </li>
-            </ul>
-            </div>
-        </li>
+        <li class="nav-item">
+                  <a class="nav-link active" data-toggle="tab" href="#acc" role="tab" aria-controls="acc">My Account</a>
+                  </li>
         <li class="nav-item">
           <a class="nav-link " data-toggle="tab" href="#prod" role="tab" aria-controls="prod">Add Product</a>
         </li>
@@ -55,18 +36,6 @@
           <div class="tab-pane " id="view" role="tabpanel">
                 <app-farmer-view-product></app-farmer-view-product>
                 </div>
-                <div class="tab-pane " id="add" role="tabpanel">
-                        <app-farmer-add-address></app-farmer-add-address>
-                  </div>
-                  <div class="tab-pane " id="chPass" role="tabpanel">
-                        <app-farmer-change-password></app-farmer-change-password>
-                  </div>
-                  <div class="tab-pane " id="altMob" role="tabpanel">
-                        <app-farmer-alternate-mobile></app-farmer-alternate-mobile>
-                  </div>
-                  <div class="tab-pane " id="delPro" role="tabpanel">
-                        <app-farmer-delete-profile></app-farmer-delete-profile>
-                  </div>
                   <div class="tab-pane active" id="acc" role="tabpanel">
                           <app-farmer-my-account></app-farmer-my-account>
                     </div>
