--- a/src/app/customer/component/product-list/product-list.component.html
+++ b/src/app/customer/component/product-list/product-list.component.html
@@ -6,7 +6,7 @@
       <form class="form-inline mt-2 mt-md-0">
         <input class="form-control  searchText" type="text" name="q" placeholder="Search" [(ngModel)]="searchInput" />
         <button class="btn btn-outline-primary my-2 my-sm-0 ml-1" type="submit" (click)='searchProduct()'>
-          <i class="fas fa-search"></i>
+          <i class="fa fa-search"></i>
         </button>
       </form>
     </div>
