--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-     <nav class="navbar navbar-expand-md navbar-dark fixed-top topnav">
+     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top topnav">
      <a class="navbar-brand" routerLink="/home">
    <img src="../../../assets/Header/kkd_logo.png" width="60" height="60" alt="">
    </a>
