--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -41,7 +41,7 @@
 
       <ul class="navbar-nav justify-content-end" *ngIf="loggedIn==true && role=='Farmer'">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home"><i class="fa fa-sign-out mr-1"></i>Log Out</a>
+          <a class="nav-link" routerLink="/home" (click)="changeOnClickOfLogOut()"><i class="fa fa-sign-out mr-1"></i>Log Out</a>
         </li>
       </ul>
 
@@ -53,7 +53,7 @@
           <a class="nav-link" routerLink="/customer/myCart"><i class="fa fa-cart-arrow-down mr-1"></i>My Cart</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home"><i class="fa fa-sign-out mr-1"></i>LogOut</a>
+          <a class="nav-link" routerLink="/home" (click)="changeOnClickOfLogOut()"> <i class="fa fa-sign-out mr-1"></i>LogOut</a>
         </li>
       </ul>
 
