implementing test cases

--- a/src/app/farmer/component/farmer-my-account/farmer-change-password/farmer-change-password.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-change-password/farmer-change-password.component.html
@@ -5,7 +5,7 @@
     <div class="form-group">
     <div class = form-comp>
     <div class = "name"><label for="currentPassword">Current Password</label></div>
-    <input type="text" [(ngModel)]="currentPassword" class="form-control" id="currentPassword" placeholder="Enter Current Password" formControlName="currentPassword">
+    <input type="password" [(ngModel)]="currentPassword" class="form-control" id="currentPassword" placeholder="Enter Current Password" formControlName="currentPassword">
     <div *ngIf="rForm.controls['currentPassword'].touched && rForm.controls['currentPassword'].invalid" class="alert">
       <div *ngIf="rForm.controls['currentPassword'].hasError('required')">
         Current Password is required!
@@ -14,7 +14,7 @@
     </div>
     <div class = form-comp>
       <div class = "name"><label for="newPassword">New Password</label></div>
-      <input type="textarea" [(ngModel)]="newPassword" class="form-control" id="newPassword" placeholder="Enter New Password" formControlName="newPassword">
+      <input type="password" [(ngModel)]="newPassword" class="form-control" id="newPassword" placeholder="Enter New Password" formControlName="newPassword">
       <div *ngIf="rForm.controls['newPassword'].touched && rForm.controls['newPassword'].invalid" class="alert">
         <div *ngIf="rForm.controls['newPassword'].hasError('required')">
           New Password is required!
@@ -23,7 +23,7 @@
       </div>
     <div class = form-comp>
       <div class = "name"><label for="reenterNewPassword">Re-enter new Password</label></div>
-      <input type="text" [(ngModel)]="reenterNewPassword" class="form-control" id="reenterNewPassword" placeholder="Enter New Password" formControlName="reenterNewPassword">
+      <input type="password" [(ngModel)]="reenterNewPassword" class="form-control" id="reenterNewPassword" placeholder="Enter New Password" formControlName="reenterNewPassword">
       <div *ngIf="rForm.controls['reenterNewPassword'].touched && rForm.controls['reenterNewPassword'].invalid" class="alert">
         <div *ngIf="rForm.controls['reenterNewPassword'].hasError('required')">
           Re-entered new Password is required!
