--- a/src/app/customer/component/product-list/product-list.component.css
+++ b/src/app/customer/component/product-list/product-list.component.css
@@ -35,5 +35,15 @@ hr {
   width: 90%;
 }
 .card {
-  width: 100%;
+  width: 105%;
+}
+
+#marLeft{
+  margin-left:2rem;
+}
+
+.vl{
+  border-left: 0.9px solid rgb(120, 138, 114); 
+  height:auto; 
+  margin-left: 2rem;
 }
