--- a/src/app/farmer/component/farmer-dashboard/farmer-dashboard.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-dashboard.component.html
@@ -1,9 +1,9 @@
 <div class="home mt-100">
-<div class="container-fluid">
+<div class="container-fluid" style="width:90%">
         <ul class="nav nav-tabs nav-justified sidebar-nav edit" id="myTab" role="tablist">
         <li class="nav-item">
-                  <a class="nav-link active" data-toggle="tab" href="#acc" role="tab" aria-controls="acc">My Account</a>
-                  </li>
+            <a class="nav-link active" data-toggle="tab" href="#acc" role="tab" aria-controls="acc">My Account</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link " data-toggle="tab" href="#prod" role="tab" aria-controls="prod">Add Product</a>
         </li>
@@ -35,10 +35,10 @@
           </div>
           <div class="tab-pane " id="view" role="tabpanel">
                 <app-farmer-view-product></app-farmer-view-product>
-                </div>
-                  <div class="tab-pane active" id="acc" role="tabpanel">
-                          <app-farmer-my-account></app-farmer-my-account>
-                    </div>
+          </div>
+          <div class="tab-pane active" id="acc" role="tabpanel">
+                <app-farmer-my-account></app-farmer-my-account>
+          </div>
       </div>
  </div>
 </div>
