order placing date changed in customer side

--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -8,21 +8,20 @@
     </button>
    <div class="container-fluid">
      <div class="navbar-collapse collapse nav" id="navbarTogglerDemo01">
-       <ul class="navbar-nav mr-auto">
-         <li class="nav-item active">
-           <a class="nav-link" routerLink="/home"><i class="fa fa-home mr-1"></i>Home<span class="sr-only">(current)</span></a>
-         </li>
-         <li class="nav-item active">
-           <a class="nav-link" routerLink="/productList"><i class="fa fa-product-hunt mr-1"></i>Products </a>
-         </li>
-
-         <li class="nav-item active">
-           <a class="nav-link" routerLink="/help"><i class="fa fa-info-circle mr-1"></i>Help</a>
-         </li>
-         <li class="nav-item active">
-           <a class="nav-link" routerLink="/support"><i class="fa fa-envelope mr-1"></i>Support</a>
-         </li>
-       </ul>
+      <ul class="nav nav-tabs mr-auto" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="home-tab" data-toggle="tab" routerLink="/home" role="tab" aria-controls="home" aria-selected="true"><i class="fa fa-home mr-1"></i>Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="profile-tab" data-toggle="tab" routerLink="/productList" role="tab" aria-controls="profile" aria-selected="false"><i class="fa fa-product-hunt mr-1"></i>Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="messages-tab" data-toggle="tab" routerLink="/help" role="tab" aria-controls="messages" aria-selected="false"><i class="fa fa-info-circle mr-1"></i>Help</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="settings-tab" data-toggle="tab" routerLink="/support" role="tab" aria-controls="settings" aria-selected="false"><i class="fa fa-envelope mr-1"></i>Support</a>
+        </li>
+      </ul>
        <ul *ngIf="loggedIn==false">
           <li class="nav-item">
             <div class="dropdown">
