--- a/src/app/home-page/header/header.component.css
+++ b/src/app/home-page/header/header.component.css
@@ -7,11 +7,11 @@ nav{
   opacity: 1.0;
 }
 
-.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
+a{
   color: #29a745;
 }
-.navbar-nav .nav-item .nav-link{
-  color: #29a745;
+.nav-link.active{
+  color:#767a82;
 }
 
 @media screen and (max-width: 600px) {
