--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -12,12 +12,15 @@
          <li class="nav-item active" *ngIf="loggedIn==false">
            <a class="nav-link" routerLink="/home"><i class="fa fa-home mr-1"></i>Home<span class="sr-only">(current)</span></a>
          </li>
-         <li class="nav-item active" *ngIf="loggedIn==false">
-           <a class="nav-link" routerLink="/productList"><i class="fa fa-product-hunt mr-1"></i>Products </a>
-         </li>
+
          <li class="nav-item active" *ngIf="loggedIn==true && role=='Customer'">
            <a class="nav-link" routerLink="/customer/myAccount"><i class="fa fa-user-circle mr-1"></i>My Account</a>
          </li>
+         
+         <li class="nav-item active">
+           <a class="nav-link" routerLink="/productList"><i class="fa fa-product-hunt mr-1"></i>Products </a>
+         </li>
+
          <li class="nav-item active">
            <a class="nav-link" routerLink="/help"><i class="fa fa-info-circle mr-1"></i>Help</a>
          </li>
