nav tabs added in homepage header

--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -41,21 +41,21 @@
           </li>
       </ul>
 
-      <ul class="navbar-nav justify-content-end" *ngIf="loggedIn==true && role=='Farmer'">
+      <ul class="nav nav-tabs" id="myTab" role="tablist" *ngIf="loggedIn==true && role=='Farmer'">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home" (click)="changeOnClickOfLogOut()"><i class="fa fa-sign-out mr-1"></i>Log Out</a>
+          <a class="nav-link" routerLink="/home" role="tab" (click)="changeOnClickOfLogOut()"><i class="fa fa-sign-out mr-1"></i>Log Out</a>
         </li>
       </ul>
 
-      <ul class="navbar-nav justify-content-end" *ngIf="loggedIn==true && role=='Customer'">
+      <ul class="nav nav-tabs" id="myTab" role="tablist" *ngIf="loggedIn==true && role=='Customer'">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/customer/myAccount"><i class="fa fa-user-circle mr-1"></i>My Account</a>
+          <a class="nav-link active" routerLink="/customer/myAccount" role="tab" data-toggle="tab"><i class="fa fa-user-circle mr-1"></i>My Account</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/customer/myCart"><i class="fa fa-cart-arrow-down mr-1"></i>My Cart</a>
+          <a class="nav-link" routerLink="/customer/myCart" role="tab" data-toggle="tab"><i class="fa fa-cart-arrow-down mr-1"></i>My Cart</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home" (click)="changeOnClickOfLogOut()"> <i class="fa fa-sign-out mr-1"></i>LogOut</a>
+          <a class="nav-link" routerLink="/home" (click)="changeOnClickOfLogOut()" role="tab" data-toggle="tab"> <i class="fa fa-sign-out mr-1"></i>LogOut</a>
         </li>
       </ul>
 
