--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
      <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top topnav">
-     <a class="navbar-brand" routerLink="/home">
+     <a class="navbar-brand">
    <img src="../../../assets/Header/kkd_logo.png" width="60" height="60" alt="">
    </a>
    <button class="navbar-toggler mr-2" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
