--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-sm-3">
         <h2 class="logo">
-          <a routerLink="/home">
+          <a>
             <img src="../../../assets/Header/kkd_logo.png" class="mt-4 ml-5 foot-logo" width="120" height="120" alt="KKD Logo">
           </a>
         </h2>
@@ -49,7 +49,7 @@
             <a routerLink="/support">Support</a>
           </li>
           <li>
-            <a routerLink="/home">Forums</a>
+            <a>Forums</a>
           </li>
         </ul>
       </div>
