--- a/src/app/farmer/component/farmer-dashboard/farmer-add-product/farmer-add-product.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-add-product/farmer-add-product.component.html
@@ -23,7 +23,7 @@
 
 		<div class = form-comp>
 			<div class = "name"><label for="description">Product description</label></div>
-			<textarea type="textarea" class="form-control" id="description" placeholder="Enter description" formControlName="description"></textarea>
+			<textarea type="textarea" class="form-control" placeholder="Enter description" formControlName="description"></textarea>
 			<div *ngIf="rForm.controls['description'].touched && rForm.controls['description'].invalid" class="alert">
 					<div *ngIf="rForm.controls['description'].hasError('required')">
 						description is required!
@@ -33,7 +33,7 @@
 
       <div class = form-comp>
 		  <div class = "name"><label for="price">Product Price per kg</label></div>
-		<input type="text" class="form-control" id="price" placeholder="Enter Price" formControlName="price">
+		<input type="text" class="form-control" placeholder="Enter Price" formControlName="price">
 		<div *ngIf="rForm.controls['price'].touched && rForm.controls['price'].invalid" class="alert">
 			  <div *ngIf="rForm.controls['price'].hasError('required')">
 				Price is required!
